Admin Site - Fixed Issue on Admin Navbar Gets Overlapped by Admin Site Elements

--- a/src/assets/styles/admin/adminnavbar.scss
+++ b/src/assets/styles/admin/adminnavbar.scss
@@ -76,6 +76,7 @@
     width: 220px;
     box-shadow: 0 10px 40px 10px rgba(0, 0, 0, 0.8);
     opacity: 0;
+    z-index: 10;
     visibility: hidden;
     transform: translateY(-30px);
     transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
